Double type handler added